# motifbank

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MOTIFBANK_COMPLETE.md  MOTIFBANK_THEOREMS.md  MotifBank_Demo.ipynb  QUICKSTART.md  README.md  README_reasonscope.md  _rebuild_bank_v2.py  api_server.py  api_test.sh  app.py  calibrate_sbert.py  canonical_metric_extensions_results.json  carpet_gen2_pc.out  carpet_gen2_qc_cache.json  carpet_gen3_gamma_result.json  compare_fmo_benchmark.py  conjecture1_analysis.json  cryst_slocal.py  deploy_hf.py  diag_pbe_convergence.py  eval_ml.py  expand_verification.py  fix_fk30.py  fix_fk30b.py  fractal3d_synthesis_decomposition.py  gamma_empirical_validation.py  gamma_ideation.py  gamma_manifold_theory.py  gamma_prompt_fingerprint.py  gamma_prompt_optimizer.py  gamma_universal_collapse.py  gen3_saturation_check.py  generate_cif.py  geom_key_collision_test.py  gp_free_predictor.py  gp_free_results.json  (+67 more)
examples/: carpet.json  cristobalite.json  cristobalite_alpha.cif  ice.json  ice_Ih_3x3.cif  ice_Ih_6x6.cif  ice_Ih_hex.cif  ice_pyscf.json  ice_test.cif  ice_test.json  mfi.json  mof.json  zeolite_lta.json
experiments/: barcode_visualization.py  canonical_metric_extensions.py  carpet_gen2_pc.py  carpet_gen3_fast.py  carpet_gen3_gamma.py  check_softmatch_range.py  compute_jacobian.py  conjecture1_analysis.py  expand_verification.json  fractal3d_results.json  gamma_manifold_results.json  gamma_phase_transition.py  gamma_universality.py  gen3_saturation.json  gpt2_factual_hdist.py  hallucination_phase_transition_results.json  polymer_ml.py  (+14 more)
(+12 files in other folders)
